--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-snappy",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "utility for testing react components against html snapshots",
   "main": "index.js",
   "scripts": {
@@ -25,11 +25,28 @@
   },
   "homepage": "https://github.com/capaj/react-snappy#readme",
   "devDependencies": {
+    "ava": "^0.16.0",
+    "babel-preset-react-app": "^1.0.0",
+    "jsdom": "^9.8.0",
+    "react": "^15.3.2",
     "standard": "^8.4.0"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
+    "diff": "^3.0.1",
     "enzyme": "^2.5.1",
+    "index-of-regex": "^1.0.0",
     "js-beautify": "^1.6.4",
-    "unexpected": "^10.18.1"
+    "react-addons-test-utils": "^15.3.2",
+    "react-dom": "^15.3.2"
+  },
+  "ava": {
+    "require": [
+      "babel-register"
+    ],
+    "files": [
+      "test/**/*.spec.js"
+    ],
+    "babel": "inherit"
   }
 }
