added global override, throw when no render output
also  fixed a bug when snapshot save would fail to save

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-snappy",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "utility for testing react components against html snapshots",
   "main": "index.js",
   "scripts": {
@@ -37,12 +37,13 @@
     "enzyme": "^2.5.1",
     "index-of-regex": "^1.0.0",
     "js-beautify": "^1.6.4",
+    "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2"
   },
   "peerDependencies": {
-     "react": "*",
-     "jsdom": "*"
+    "react": "*",
+    "jsdom": "*"
   },
   "ava": {
     "require": [
