--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-snappy",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "utility for testing react components against html snapshots",
   "main": "index.js",
   "scripts": {
@@ -24,26 +24,25 @@
     "url": "https://github.com/capaj/react-snappy/issues"
   },
   "homepage": "https://github.com/capaj/react-snappy#readme",
-  "devDependencies": {
-    "ava": "^0.16.0",
-    "babel-preset-react-app": "^1.0.0",
-    "jsdom": "^9.8.0",
-    "react": "^15.3.2",
-    "standard": "^8.4.0"
-  },
   "dependencies": {
+    "jsdom": "^9.8.3",
     "chalk": "^1.1.3",
     "diff": "^3.0.1",
-    "enzyme": "^2.5.1",
+    "enzyme": "^2.6.0",
     "index-of-regex": "^1.0.0",
     "js-beautify": "^1.6.4",
     "mkdirp": "^0.5.1",
     "react-addons-test-utils": "^15.3.2",
     "react-dom": "^15.3.2"
   },
+  "devDependencies": {
+    "ava": "^0.16.0",
+    "babel-preset-react-app": "^1.0.0",
+    "react": "^15.3.2",
+    "standard": "^8.5.0"
+  },
   "peerDependencies": {
-    "react": "*",
-    "jsdom": "*"
+    "react": "*"
   },
   "ava": {
     "require": [
